# base-infra

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  readme.md  setup-aws-params.py  setup-aws-params.sh  trivy.yaml
.github/workflow/: deploy.yml
.github/workflows/: arc.yml  ci.yml  deploy-all.yml  deploy-eks.yml  deploy.yml  destroy-all.yml  runner-factory.yml
ansible/app-1/: README.md  ansible.cfg  hosts  inventory
ansible/app-1/files/: default_site.html
ansible/app-1/playbooks/: install_apache.yml  install_base_packages.yml  uninstall_apache.yml  uninstall_base_packages.yml
aws/lambda/hello-world/: go.mod  main.go
base-infra-deployer/: README.md  cleanup-build.py  cleanup-build.sh  cleanup_build.py  pyproject.toml  upload.sh
base-infra-deployer/src/: base_args.py  deployer.py  deployer_logger.py  tf_deployer.py
base-infra-deployer/src/deployer/: __version__.py  base_args.py  base_infra_deployer.py  deployer_logger.py  docker_deployer.py  main.py  tf_deployer.py
base-infra-deployer/tests/: test_deployer.py
cookbooks/base-ami/: CHANGELOG.md  Policyfile.rb  README.md  kitchen.yml  metadata.rb
cookbooks/base-ami/attributes/: default.rb
cookbooks/base-ami/recipes/: create_base_users.rb  create_file.rb  default.rb  install_apache.rb  install_base_packages.rb  install_motd.rb  install_python_packages.rb
cookbooks/base-infra/attributes/: default.rb
cookbooks/base-infra/recipes/: create_base_users.rb  create_file.rb  install_base_packages.rb
deployer/: deployer.py  pyproject.toml
deployer/src/: deployer.py  tfdeployer.py
dockerfiles/github-actions-runner/: Dockerfile  README.md
dockerfiles/github-arc-runners/: Dockerfile
jenkins/: jenkins.yml
jenkins-testing/: data.tf  main.tf  variables.tf  versions.tf
kubernetes/manifests/: mynamespace.yml
kubernetes/manifests/argo-example-app/: argo-example-app.yaml
playbooks/app-1/: README.md  ansible.cfg  hosts  inventory
playbooks/base-ami/: base-ec2.yml  nginx.yml
terraform/: deployer.py
terraform/consul/: main.tf  variables.tf  versions.tf
(+142 files in other folders)
