[build-system]
requires = [
    "setuptools >= 65.5.1",
    "wheel >= 0.38.4"
]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "boto3"
]
description = "base-infra"
dynamic = ["version"]
name = "base-infra"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["terraform"]