[build-system]
requires = [
    "setuptools >= 65.5.1",
    "wheel >= 0.38.4"
]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "boto3"
]
description = "base-infra-deployer deployer utility"
name = "base-infra-deployer"
requires-python = ">=3.10"
version = "1.0.0"

[project.scripts]
base-deploy = "deployer.base_infra_deployer:main"

[tool.setuptools.packages.find]
where = ["src"]