[build-system]
requires = [
    "setuptools >= 68.2.2",
    "wheel >= 0.41.2"
]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "boto3",
    "pylint"
]
description = "base-infra-deployer deployer utility"
name = "base-infra-deployer"
requires-python = ">=3.10"
version = "1.0.1"

[project.scripts]
base-deploy = "deployer.main:main"

[tool.setuptools.packages.find]
where = ["src"]