[build-system]
requires = [
    "setuptools >= 68.2.2",
    "wheel >= 0.41.2"
]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "pafable", email = "pafable@github.com"}
]

classifiers = [
    "Programming Language :: Python :: 3.10"
]

dependencies = [
    "boto3",
    "build",
    "localstack",
    "pylint",
    "twine"
]

description = "base-infra-deployer deployer utility"
license = {file = "../LICENSE.txt"}
name = "base-infra-deployer"
readme = "README.md"
requires-python = ">=3.10"
version = "1.1.0"

[project.scripts]
base-deploy = "deployer.main:main"

[project.urls]
"Homepage" = "https://github.com/we-are-discussing-rest/base-infra"

[tool.setuptools.packages.find]
where = ["src"]
